# fastapi-redis

./: .coveragerc  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  Pipfile  README.md  docker-compose.yml  logger.ini  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: Dockerfile  build-and-test.yml  entrypoint.sh
app/: config.py  logging.py  main.py  redis.py  routers.py  schemas.py  service.py  utils.py
fastapi_redis/: main.py
postman/: fastapi-redis.postman_collection.json
tests/: PubChem_compound_text_covid-19_records.json  conftest.py  test_api.py  test_fastapi.py
